--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,15 +1,10 @@
-html{
+html,body, ul, li{
+  padding: 0;
+  margin:0;
+  font-family: 'Open Sans', sans-serif;
   font-size:16px
 }
-
-html,body{
- padding: 0;
- margin:0;
-
-}
 body{
-  font-family:'Open Sans','sans-serif';
-  font-size: 16px;
   line-height:1;
 }
 a{
@@ -23,7 +18,7 @@ a,a:hover{
 }
 @media screen and (max-width: 1200px) {
   html, body{
-    font-size: 14px !important;
+    font-size: 16px !important;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -32,6 +27,12 @@ a,a:hover{
   }
 }
 @media screen and (max-width: 768px) {
+  html, body{
+    font-size: 14px !important;
+  }
+}
+
+@media screen and (max-width: 425px) {
   html, body{
     font-size: 12px !important;
   }
