--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,500,600,700');
+
 html,body, ul, li, i{
   padding: 0;
   margin:0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size:16px
 }
 body{
