--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700');
 
 html,body, ul, li, i{
   padding: 0;
@@ -26,6 +26,22 @@ a,a:hover{
   -moz-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
+
+.admin-header{
+  position: fixed;
+  // right: 0;
+  top: 70px;
+  z-index:3;
+  width: 100%;
+  // background-color: blue;
+  background-color: black;
+  a{
+    float: right;
+    padding: 0.5rem;
+  color:white;
+}
+}
+
 @media screen and (max-width: 1200px) {
   html, body{
     font-size: 16px !important;
