EMPTY CART UI FIX

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,12 +33,11 @@ a,a:hover{
   top: 70px;
   z-index:3;
   width: 100%;
-  // background-color: blue;
   background-color: black;
   a{
     float: right;
-    padding: 0.5rem;
-  color:white;
+    padding: 0.5rem 2rem;
+    color:white;
 }
 }
 
