--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,10 @@
 
 html,body, ul, li, i{
   padding: 0;
-  margin:0;
+  margin: 0;
   font-family: 'Josefin Sans', sans-serif;
-  font-size:16px
+  font-size: 16px;
+  white-space: pre-wrap;
 }
 body{
   line-height:1;
